<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="AccountCreationFloodcheck">You have made too many accounts. Please wait before making more.</string>
    <string name="AccountIssueErrorContactSupport">Account issue. Please contact Support.</string>
    <string name="AccountIssueErrorTryAgainContactSupport">Account issue. Please try again or contact Support.</string>
    <string name="Add">Add</string>
    <string name="AddFriends">Add Friends</string>
    <string name="AnyUserNeedsToSignIn">Please login to complete the pending transaction. If this problem persists contact info@skyblox.co</string>
    <string name="AppPurchasingDisabledTitle">In-App Purchasing disabled</string>
    <string name="AttemptsExceededTryLaterOrResetPass">You’ve exceeded the number of attempts. Please try again later or reset your password.</string>
    <string name="AvatarWord">Avatar</string>
    <string name="Banned14Day">Banned for 14 Days</string>
    <string name="Banned1Day">Banned for 1 Day</string>
    <string name="Banned3Day">Banned for 3 Days</string>
    <string name="Banned7Day">Banned for 7 Days</string>
    <string name="BannedAppeals">If you wish to appeal, please send an email to &lt;a href=\"mailto:appeals@skyblox.co?Subject=Ban%20Appeal\">appeals@skyblox.co&lt;/a>.</string>
    <string name="BannedDefault">Account Unavailable</string>
    <string name="BannedDelete">Account Deleted</string>
    <string name="BannedDeletedFirstLine">Our content monitors have determined that your behavior at ROBLOX has been in violation of our Terms of Service.</string>
    <string name="BannedDeletedMessage">Your account has been terminated.</string>
    <string name="BannedFirstLine">Our content monitors have determined that your behavior at ROBLOX has been in violation of our Terms of Service. We will terminate your account if you do not abide by the rules.</string>
    <string name="BannedGuidelines">Please abide by the &lt;a href=\"https://en.help.skyblox.co/hc/en-us/articles/203313410-ROBLOX-Rules-of-Conduct\">ROBLOX Community Guidelines&lt;/a> so that ROBLOX can be fun for users of all ages.</string>
    <string name="BannedLengthAndEndDate">Your account has been banned for %1$d days. You may reactive it after %2$s.</string>
    <string name="BannedMessagePermanent">You have been banned from ROBLOX permanently. Please login via a browser for more information.</string>
    <string name="BannedMessageTemporary">You have been temporarily banned from ROBLOX. Please login via a browser for more information.</string>
    <string name="BannedModeratorNote">Moderator Note: %s</string>
    <string name="BannedReviewed">Reviewed: %s</string>
    <string name="BannedTitle">Account Unavailable</string>
    <string name="BannedWarning">Warning</string>
    <string name="BannedWarningInstructions">You must login at &lt;a href=\"http://www.skyblox.co\">www.skyblox.co&lt;/a> to re-activate your account.</string>
    <string name="BirthdayInvalid">Invalid birthday.</string>
    <string name="BirthdayWord">Birthday</string>
    <string name="BlogWord">Blog</string>
    <string name="BuildersClubWord">Builders Club</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelWord">Cancel</string>
    <string name="CannotMakePurchase">We are sorry, you cannot make purchases at this time. If this problem persists contact info@skyblox.co</string>
    <string name="CannotPurchaseBecauseParentalControl">You are not able to make purchases. Check your parental control settings and try again later.</string>
    <string name="CatalogWord">Catalog</string>
    <string name="CharacterWord">Character</string>
    <string name="ChatSysMsgTitleChanged">%1$s named the chat group: %2$s</string>
    <string name="ChatSysMsgTitleChangedNoUser">chat group renamed: %1$s</string>
    <string name="ChatTitle">Chat</string>
    <string name="CheckingMessage">Checking…</string>
    <string name="ChooseOne">Choose one</string>
    <string name="ClearCookiesWord">Clear Cookies</string>
    <string name="CodeSent">Code Sent</string>
    <string name="CommunityWord">Community</string>
    <string name="ConnectingBannerText">Connecting…</string>
    <string name="ConnectionError">Unable to contact server. Please check your internet connection!</string>
    <string name="ConnectionErrorGameEnded">Cannot join this game because it has ended.</string>
    <string name="ConnectionErrorGameFull">Cannot join this game because it is full.</string>
    <string name="Conversation">Conversation</string>
    <string name="ConversationFriendLimitReached">No more friends can be added to this conversation</string>
    <string name="ConversationNotFound">Oops! Conversation not available</string>
    <string name="CookiesClearedMessage">Roblox Cookies are cleared</string>
    <string name="CrashFound">The game did not end correctly. You may need a Software Update. See the Settings section About Device.</string>
    <string name="Create">Create</string>
    <string name="CreateChatGroup">Create Chat Group</string>
    <string name="CreateGroup">Create Group</string>
    <string name="CreateUsernameTooLong">Username must be fewer than 20 characters!</string>
    <string name="CreateUsernameTooShort">Username must be longer than 3 characters!</string>
    <string name="CredentialsChangedReturnToLogin">Credentials changed. Please return to login screen.</string>
    <string name="CurrentBalance">Current Balance</string>
    <string name="DefaultDeviceBlacklist">XT1080,Nexus 7,SMÃ‚Â¬?-T210R,SM-T320</string>
    <string name="DismissButtonText">Dismiss</string>
    <string name="DoneWord">Done</string>
    <string name="EmailInvalid">Invalid Email Address</string>
    <string name="EmailRequirements">(optional)</string>
    <string name="EmailRequirementsUnder13">"Parent's Email"</string>
    <string name="EmailWord">Email</string>
    <string name="EndingGame">Game Closing</string>
    <string name="EnterHerePhrase">Enter Here</string>
    <string name="EntryIncorrectBody">One or more of the fields are incorrect or empty.</string>
    <string name="EntryIncorrectTitle">Please Check Entries</string>
    <string name="ErrorTryAgain">Something went wrong. Please try again later.</string>
    <string name="EventsWord">Events</string>
    <string name="FeatureNotAvailableErrorContactSupport">Feature not available. Please contact Support.</string>
    <string name="FieldsIncomplete">Not all required fields are filled</string>
    <string name="ForgotPassword">Forgot password</string>
    <string name="ForgotPasswordQuestion">Forgot Password?</string>
    <string name="ForumWord">Forum</string>
    <string name="FriendAlreadyInConversation">This friend is already in the conversation</string>
    <string name="FriendsWord">Friends</string>
    <string name="GameStartFailureDisabled">Sorry! This game is disabled. Please join another game.</string>
    <string name="GameStartFailureError">Sorry! This game failed to start. Please try joining another game.</string>
    <string name="GameStartFailureGameEnded">Sorry! This game has already ended.</string>
    <string name="GameStartFailureGameFull">Sorry! This game is already full.</string>
    <string name="LoginButton">Login</string>
    <string name="LoginWord">LOGIN</string>
    <string name="LoginWordLower">Login</string>
    <string name="PlayNowButtonLabel">Play Now</string>
    <string name="SignupButton">Sign up</string>
    <string name="SignupLower">Sign Up</string>
    <string name="login_button_content_desc">loginLoginButton</string>
    <string name="login_cancel_button_content_desc">loginCancelButton</string>
    <string name="login_password_content_description">loginPassword</string>
    <string name="login_password_hint_text">Password</string>
    <string name="login_password_hint_text_long">Password (4 letters and 2 numbers min.)</string>
    <string name="login_username_contains_invalid_characters">Username contains invalid characters</string>
    <string name="login_username_content_description">loginUsername</string>
    <string name="login_username_hint_text">Username</string>
    <string name="login_username_hint_text_long">Username (6-20 characters, no spaces)</string>
    <string name="not_a_member">Not a member?</string>
</resources>