<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.2"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <com.skyblox.c2017.components.RbxTextView android:textSize="@dimen/textSizeSignupHeader" android:textColor="@color/RbxGray2" android:gravity="bottom" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/LoginWord" android:layout_weight="2.0" />
    </LinearLayout>
    <View android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
    <com.skyblox.c2017.components.RbxEditText android:id="@id/fragment_login_username" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="3.0dip" android:layout_weight="0.4" android:contentDescription="@string/login_username_content_description" app:hintText="@string/login_username_hint_text" app:errorText="@string/login_username_contains_invalid_characters" app:hintTextLong="@string/login_username_hint_text_long" app:inputType="textNoSuggestions" style="@style/Theme.Roblox.EditText" />
    <com.skyblox.c2017.components.RbxEditText android:id="@id/fragment_login_password" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="2.0dip" android:layout_weight="0.4" android:contentDescription="@string/login_password_content_description" app:hintText="@string/login_password_hint_text" app:hintTextLong="@string/login_password_hint_text_long" app:inputType="password" style="@style/Theme.Roblox.EditText" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.2" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
            <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0" />
            <com.skyblox.c2017.components.RbxButton android:textSize="@dimen/textSizeBtnCancel" android:layout_gravity="center" android:id="@id/fragment_login_btn_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/CancelWord" android:layout_weight="10.0" android:contentDescription="@string/login_cancel_button_content_desc" style="@style/Theme.Roblox.Button.Flat.White" />
            <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <com.skyblox.c2017.components.RbxProgressButton android:layout_gravity="center" android:id="@id/fragment_login_btn_login" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="10.0" android:contentDescription="@string/login_button_content_desc" app:defButtonText="@string/LoginWordLower" app:progressTextSize="@dimen/textSizeBtnSubmitProgress" app:buttonTextSize="@dimen/textSizeBtnSubmit" style="@style/Theme.Roblox.Progress.Button.Blue" />
            <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.75">
            <com.skyblox.c2017.components.RbxTextView android:textSize="@dimen/textSizeLoginFinePrint" android:gravity="center|right" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/not_a_member" />
            <com.skyblox.c2017.components.RbxButton android:textSize="@dimen/textSizeLoginFinePrint" android:textColor="@color/RbxBlue2" android:gravity="left" android:id="@id/fragment_login_btn_signup" android:background="@android:color/transparent" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SignupLower" />
        </LinearLayout>
        <com.skyblox.c2017.components.RbxButton android:textSize="@dimen/textSizeLoginFinePrint" android:textColor="@color/RbxBlue2" android:id="@id/fragment_login_btn_forgot_password" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ForgotPasswordQuestion" />
    </LinearLayout>
</LinearLayout>
