<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/pre_signup_landing_layout" android:background="@color/RbxGray5" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="7.0"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/pre_signup_slides_container" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="6.3">
        <android.support.v4.view.ViewPager android:id="@id/pre_signup_view_pager" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <android.support.design.widget.TabLayout android:id="@id/pre_signup_tab_dots" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:tabIndicatorHeight="0.0dip" app:tabBackground="@drawable/activity_pre_sign_up_tab_selector" app:tabGravity="center" />
        <com.skyblox.c2017.components.RbxButton android:textSize="@dimen/textSizeSignupLogin" android:textStyle="bold" android:textColor="@color/RbxGray2" android:id="@id/pre_signup_play_now_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="12.0dip" android:text="@string/PlayNowButtonLabel" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="1.0" android:layout_weight="0.7">
        <com.skyblox.c2017.components.RbxButton android:textSize="@dimen/textSizeBtnCancel" android:layout_gravity="center" android:id="@id/pre_signup_login_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/LoginButton" android:layout_weight="0.5" style="@style/Theme.Roblox.Button.Flat.White.Square.Corners" />
        <com.skyblox.c2017.components.RbxButton android:textSize="@dimen/textSizeBtnCancel" android:layout_gravity="center" android:id="@id/pre_signup_signup_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/SignupButton" android:layout_weight="0.5" style="@style/Theme.Roblox.Button.Flat.Blue.Square.Corners" />
    </LinearLayout>
</LinearLayout>
